<resources>
    <string name="app_name">LoginATM</string>
    <string name="login_title">Login to the ATM</string>

    <string name="login_button">Login</string>

    <string name="login_success">Login Success</string>
    <string name="login_fail">Login Fail</string>
    <string name="login_ok">OK</string>

    <string name="account_number">Account Number:</string>
    <string name="account_number_hint">1350366</string>

    <string name="password">Password:</string>
    <string name="password_hint">12345</string>

    <string name="customer_name">Customer Name:</string>
    <string name="customer_name_hint">Nguyễn Văn A</string>

    <string name="amount">Amount:</string>
    <string name="amount_hint">100</string>
</resources>
