<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
            android:text="@string/login_success"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtStatusLogin"
            style="@style/title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    <LinearLayout
            android:id="@+id/layoutInfo"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:layout_weight="1"
                    android:gravity="right"
                    android:layout_marginRight="8dp"
                    android:layout_marginEnd="8dp"
                    android:textColor="@color/colorText"
                    android:text="@string/account_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            <TextView
                    android:id="@+id/txtAccountNo"
                    android:layout_weight="1"
                    android:textColor="@color/colorText"
                    android:text="@string/account_number_hint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:layout_weight="1"
                    android:gravity="right"
                    android:layout_marginRight="8dp"
                    android:layout_marginEnd="8dp"
                    android:textColor="@color/colorText"
                    android:text="@string/customer_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            <TextView
                    android:id="@+id/txtCustomerName"
                    android:layout_weight="1"
                    android:textColor="@color/colorText"
                    android:text="@string/customer_name_hint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:layout_weight="1"
                    android:gravity="right"
                    android:layout_marginRight="8dp"
                    android:layout_marginEnd="8dp"
                    android:textColor="@color/colorText"
                    android:text="@string/amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            <TextView
                    android:id="@+id/txtAmount"
                    android:layout_weight="1"
                    android:textColor="@color/colorText"
                    android:text="@string/amount_hint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>


    <Button
            android:text="@string/login_ok"
            android:id="@+id/btnOK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
</LinearLayout>