<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
            style="@style/title"
            android:text="@string/login_title"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/textView"
            app:layout_constraintVertical_weight="1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"/>
    <android.support.constraint.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintVertical_weight="0.75"
            android:id="@+id/constraintLayout"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent">

        <EditText
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:hint="@string/account_number_hint"
                android:ems="10"
                android:id="@+id/edtAccountNumber"
                android:gravity="left|center"
                app:layout_constraintHorizontal_weight="2"
                app:layout_constraintStart_toEndOf="@+id/textView2"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        <TextView
                android:text="@string/account_number"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:id="@+id/textView2"
                android:gravity="right|center"
                app:layout_constraintHorizontal_weight="1"
                android:textColor="@color/colorText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toStartOf="@+id/edtAccountNumber"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_chainStyle="packed"/>
    </android.support.constraint.ConstraintLayout>
    <android.support.constraint.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintVertical_weight="0.75"
            android:id="@+id/constraintLayout2"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
            app:layout_constraintBottom_toTopOf="@+id/ConstraintLayout3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent">

        <EditText
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:inputType="textPassword"
                android:hint="@string/password_hint"
                android:ems="10"
                android:id="@+id/edtPassword"
                app:layout_constraintHorizontal_weight="2"
                app:layout_constraintStart_toEndOf="@+id/textView3"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        <TextView
                android:text="@string/password"
                android:layout_width="0dp"
                android:gravity="right|center"
                android:layout_height="0dp"
                android:id="@+id/textView3"
                app:layout_constraintHorizontal_weight="1"
                android:textColor="@color/colorText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toStartOf="@+id/edtPassword"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_chainStyle="packed"/>
    </android.support.constraint.ConstraintLayout>
    <android.support.constraint.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/ConstraintLayout3"
            app:layout_constraintVertical_weight="5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent">

        <Button
                android:text="@string/login_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/btnLogin"
                android:layout_margin="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.0"/>
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>